--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
+bcrypt==3.1.6
+blinker==1.4
+cffi==1.11.5
+Click==7.0
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.3.2
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
 pathlib==1.0.1
+pkg-resources==0.0.0
+pycparser==2.19
+six==1.12.0
+SQLAlchemy==1.2.16
+Werkzeug==0.14.1
 wget==3.2
-psycopg2==2.7.6.1
-Flask-SQLAlchemy
-flask-bcrypt==0.7.1
-Flask-Mail
